--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,19 @@
 	    <artifactId>httpmime</artifactId>
 	    <version>4.5.3</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-core -->
+	<dependency>
+	    <groupId>org.apache.spark</groupId>
+	    <artifactId>spark-core_2.11</artifactId>
+	    <version>2.2.0</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-sql -->
+	<dependency>
+	    <groupId>org.apache.spark</groupId>
+	    <artifactId>spark-sql_2.11</artifactId>
+	    <version>2.2.0</version>
+	</dependency>
    </dependencies>
 </project>
