--- a/pom.xml
+++ b/pom.xml
@@ -43,5 +43,17 @@
 	    <artifactId>spark-sql_2.11</artifactId>
 	    <version>2.2.0</version>
 	</dependency>
+	
+	<dependency>  
+         <groupId>com.google.zxing</groupId>  
+         <artifactId>core</artifactId>  
+         <version>3.3.2</version>  
+     </dependency>  
+     <dependency>  
+         <groupId>com.google.zxing</groupId>  
+         <artifactId>javase</artifactId>  
+         <version>3.3.2</version>  
+     </dependency>  
+        
    </dependencies>
 </project>
